fix squishy communities

--- a/src/app/components/community/slider/item/item.styl
+++ b/src/app/components/community/slider/item/item.styl
@@ -10,8 +10,10 @@ $-size = 100px
 	margin-right: 10px
 	vertical-align: middle
 	width: $-size-xs
-	height: $-size-xs
 	position: relative
+
+	@media $media-xs
+		height: $-size-xs
 
 	@media $media-sm-up
 		width: $-size
@@ -32,7 +34,9 @@ $-size = 100px
 	change-bg('bg-offset')
 	border: 2px solid var(--theme-bg-actual)
 	width: $-size-xs
-	max-height: $-size-xs
+
+	@media $media-xs
+		max-height: $-size-xs
 
 	@media $media-sm-up
 		width: $-size
